# DarwinChronicles

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md
.claude/skills/code-review-game/: SKILL.md
.claude/skills/docs-maintainer/: SKILL.md
.claude/skills/gameplay-feature/: SKILL.md
.claude/skills/gpt-behavior-tuning/: SKILL.md  gpt_behavior.py
.claude/skills/gpt-behavior-tuning/.sessions/: hydrology-perfection.json  lakes-and-river-dynamics.json  qg-implementation.json  qg-instability-growth.json  qg-plan.json  qg-test.json  weather-atmosphere-review.json  weather-postfix-review.json  weather-variability-v9.json  weather-variability.json
.claude/skills/gpt-design-consult/: SKILL.md  gpt_consult.py
.claude/skills/gpt-design-consult/.sessions/: geology-not-hydrology.json
.claude/skills/gpt-perf-consult/: SKILL.md  gpt_perf_consult.py
.claude/skills/gpt-ui-review/: SKILL.md  gpt_ui_review.py
.claude/skills/modern-cpp-game/: SKILL.md
.claude/skills/procgen-visual-review/: SKILL.md  gpt_review.py
.claude/skills/realistic-sprite-gen/: SKILL.md
.claude/skills/reality-check/: SKILL.md
.claude/skills/sandbox-ui/: SKILL.md
.claude/skills/sprite-gen-visual-review-loop/: SKILL.md
benches/: CMakeLists.txt  bench_simulation.cpp
cmake/: Dependencies.cmake
docs/: ARCHITECTURE.md  CHANGELOG.md  README.md
docs/decisions/: 0001-rendering-architecture.md  0002-chunk-streaming.md  0003-ecs-over-oop.md  0004-energy-as-universal-currency.md  0005-genome-encoded-neural-networks.md  0006-planetary-physics-cascade.md  0007-sandbox-layer.md  0008-two-layer-atmosphere-and-baseline-anomaly-split.md  0009-tectonic-plate-terrain-generation.md  0010-geology-first-terrain-architecture.md  0011-d8-flow-accumulation-hydrology.md  0012-basin-spillway-storage-for-persistent-lakes.md  0012-basin-spillway-storage-lakes.md  0012-two-layer-qg-dynamics.md  0013-atmosphere-energy-conservation-and-t-prognostics.md  0014-two-layer-qg-dynamics.md  INDEX.md
docs/ideation/: improvements.md  map-gen-systems.md  veg-gen.md
docs/systems/: NEURAL_EVOLUTION.md  NUTRIENT_REGENERATION.md  PLANETARY_MODEL.md  PLANT_GENERATION.md  SPRITE_GENERATION.md  TERRAIN_GENERATION.md  WEATHER_SYSTEM.md  WORLD_GENERATION.md
examples/: CMakeLists.txt  earth_like.cpp  mars_like.cpp
include/darwin/environment/: climate.h  params.h  planetary.h
include/darwin/evolution/: mutations.h  reproduction.h  selection.h
include/darwin/organisms/: brain.h  components.h  genome.h  metabolism.h  sensors.h
include/darwin/rendering/: camera.h  debug_viz.h  sprite_gen.h  ui.h
include/darwin/simulation/: organism_update.h  scheduling.h  tick.h
include/darwin/world/: biomes.h  fields.h  generation.h  grid.h  regeneration.h
sandboxes/: CMakeLists.txt
sandboxes/spritetest/: CMakeLists.txt  main.cpp
sandboxes/veggen/: CMakeLists.txt  main.cpp  metrics.cpp  metrics.h  plant_sprite.cpp  plant_sprite.h  renderer.cpp  renderer.h  telemetry.cpp  telemetry.h  vegetation.cpp  vegetation.h
sandboxes/weather/: CMakeLists.txt  atmosphere.cpp  atmosphere.h  dynamics.cpp  dynamics.h  main.cpp  renderer.cpp  renderer.h  telemetry.cpp  telemetry.h  terrain_gen.cpp  terrain_gen.h  tile_texture.cpp  tile_texture.h  ui.h  weather.cpp  weather.h
sandboxes/worldgen/: CMakeLists.txt  config.cpp  config.h  main.cpp  renderer.cpp  renderer.h  telemetry.cpp  telemetry.h  terrain_gen.cpp  terrain_gen.h  world_gen.cpp  world_gen.h
src/: main.cpp
src/environment/: CMakeLists.txt  README.md  climate.cpp  params.cpp  planetary.cpp
src/evolution/: CMakeLists.txt  README.md  mutations.cpp  reproduction.cpp  selection.cpp
src/organisms/: CMakeLists.txt  README.md  brain.cpp  components.cpp  genome.cpp  metabolism.cpp  sensors.cpp
src/rendering/: CMakeLists.txt  README.md  camera.cpp  debug_viz.cpp  sprite_gen.cpp  ui.cpp
src/simulation/: CMakeLists.txt  README.md  organism_update.cpp  scheduling.cpp  tick.cpp
src/world/: CMakeLists.txt  README.md  biomes.cpp  fields.cpp  generation.cpp  grid.cpp  regeneration.cpp
tests/: CMakeLists.txt  test_autotile.cpp  test_depressions.cpp  test_environment.cpp  test_evolution.cpp  test_organisms.cpp  test_simulation.cpp  test_world.cpp
